Fix overlapping of password file by login button on login page (closes: #13496).
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/3.8/trunk@19739 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/login.css
+++ b/share/html/NoAuth/css/web2/login.css
@@ -77,3 +77,6 @@ margin-right:auto;margin-left:auto;
 
 }
 
+#login-box .button-row {
+  margin-top: 0.5em;
+}
